# qa_guru_python_5_18

./: README.md
poetry/: pyproject.toml
tests/: conftest.py  test_apple.py
