[tool.poetry]
name = "poetry"
version = "0.1.0"
description = "poetry project qaguru"
authors = ["Some Name <thatspock@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc2"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
